2010-04-12  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-doc-bindings): Restore key for slime-apropos.

2010-04-12  Helmut Eller  <heller@common-lisp.net>

	Fix compile-file for various backends.

	* slime.el (slime-compile-file): Only pass non-nil keyword args to
	Lisp.
	(slime-simplify-plist): New helper.
	(slime-compile-and-load-file): Pass policy parameter directly
	without using global variables.

	* swank.lisp (compile-file-for-emacs): Change singature sightly.

2010-04-06  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-create-compilation-log): Enable
	compilation-mode, which was enabled previously by
	slime-insert-compilation-log.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-doc-bindings): Move slime-apropos to C-c C-d A,
	C-c C-d a will be bound to slime-autodoc-manually.

	* doc/slime.texi: Document the above change.

2010-04-05  Stas Boukarev  <stassats@gmail.com>

	* slime.el: Some further adaptations to the new slime-with-popup-buffer.

2010-04-04  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-insert-threads): Use header-line-format only when
	it's present (XEmacs doesn't support it).

2010-04-04  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-with-popup-buffer): Make &optional parameters
	&key parameters, add modes parameter.
	slime-with-popup-buffer sets up some buffer local variables,
	but enabling major modes kills all buffer locals, so modes should
	be enabled before setting them.
	Adopt changes to slime-with-popup-buffer where needed.
	This fixes several bugs with popup buffers on non-default connections.

2010-04-03  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-update-threads-buffer): New formatting, with labels
	and additional information provided by the backend.
	* swank-allegro.lisp (thread-attributes): Move process-priority from
	thread-status.

2010-03-29  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Add gud as compile-time dependency.
